Bug 398149 - Execute command does not work (argument badly transformed)
Summary: Execute command does not work (argument badly transformed)
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.9.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-09-02 10:36 UTC by maxime.haselbauer
Modified: 2018-09-03 19:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description maxime.haselbauer 2018-09-02 10:36:29 UTC
Make a new filter 
Put whatever as a conditions 
In "FilterActions" select "Execute command"
Put
path/to/your/script.sh %0 %1 %3 %{itemurl}
Select apply, string has been replaced by 
path/to/your/script.sh %250 %251 %253 %25{itemurl}

Which lead script.sh to receive things in form 
/tmp/akonadi_mailfilter_agent.MmuxjU25{itemurl}

Remark if you select several time Apply (modify a liitel thing to re-enable the button), you can end-up with an arbitrary number of 25 ;)
Comment 1 Laurent Montel 2018-09-02 11:26:37 UTC
I will investigate soon
Comment 2 Laurent Montel 2018-09-03 19:45:38 UTC
Git commit 9cb198999e0e494c53aa22c2fbad86eb4c5ce31f by Laurent Montel.
Committed on 03/09/2018 at 19:44.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix Bug 398149 - Execute command does not work (argument badly transformed)

FIXED-IN: 5.9.1

M  +2    -7    src/filter/filteractions/filteractionwithurl.cpp

https://commits.kde.org/mailcommon/9cb198999e0e494c53aa22c2fbad86eb4c5ce31f