Fix Bug 398149 - Execute command does not work (argument badly transformed)

FIXED-IN: 5.9.1
BUG: 398149